--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.3",
     "morgan": "~1.9.1"
   }
 }
